Fix issue header margins on small screens
Change grid template row width from 100% to 100vw

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
 
 .wrapper {
     display: grid;
-    grid-template: 10% 1fr 3% / 100%;
+    grid-template: 10% 1fr 3% / 100vw;
     grid-template-areas: 
         "header"
         "content"
